clients/atlas-tui/tests/snapshots/golden_predictors__the_predictors_view_renders_the_board_at_120x36.snap
---
source: tests/golden_predictors.rs
expression: "with_board(BOARD).frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ PREDICTOR BOARD                             as of 2026-08-20 · run abcd1234│▌ PULSE                          "
" 2 DESK │target realized_vol · horizon 21d · embargo 5d · 420 obs · 12 folds          │ desk stress  …                  "
" 3 MKTS │groupwise:angle_zz was admitted and beat its own selection null (p=0.04).    │ regime CALM  robust UNCERTAIN   "
" 4 BOOK │                                                                             │ drawdown 0.0%  tier NONE        "
" 5 RSCH │MODEL              LANE  MEAN IC    STD    Δ IC      t   W/N FOLDS           │ gross 100.0%                    "
"▌6 PRED │groupwise:angle_zz quant   0.061     --  +0.024  +2.40   9/2 ▇▅▁▆█▄▆▇ ★CHAMP │                                 "
" 7 WORK │ridge:none         ctrl    0.037     --   0.000     -- --/-- --       BASE   │▌ BREADTH                        "
" 8 AUDIT│kernel:linear      ctrl    0.037     --   0.000     -- --/-- --              │ ███████████████████████████████ "
" 9 SETT │Δ IC vs ridge:none                                                           │ adv 1 / dec 4                   "
"        │groupwise:angle_zz ████████████████████████ +0.024                           │                                 "
"        │ridge:none         ▏                        baseline                         │▌ MOVERS                         "
"        │kernel:linear                               0.000                            │ ▲ best  XLF    +1.24%           "
"        │                                                                             │ ▼ worst XLK    -2.08%           "
"        │· evaluated on the offline synthetic panel                                   │                                 "
"        │                                                                             │▌ REGIME                         "
"        │The augmented lane is the angle and ZZ feature maps.                         │ … waiting for the regime panel  "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │                                                                             │ state      STRESS               "
"        │                                                                             │ agreement  ALIGNED              "
"        │                                                                             │ conviction 84.0%                "
"        │                                                                             │ news       alpaca               "
"        │                                                                             │─────────────────────────────────"
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │─────────────────────────────────────────────────────────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                      ● SSE  ● OWNER  SYNTHETIC  propose·auto  GLASS "
